--- a/template/portfolio.html
+++ b/template/portfolio.html
@@ -12,7 +12,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Executive Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
+<meta name="keywords" content="Executive Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
@@ -26,7 +26,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 <!-- //js -->
 <!-- font-awesome icons -->
-<link href="css/font-awesome.css" rel="stylesheet" type="text/css" media="all" /> 
+<link href="css/font-awesome.css" rel="stylesheet" type="text/css" media="all" />
 <!-- //font-awesome icons -->
 <link href="//fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
@@ -35,7 +35,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script type="text/javascript" src="js/easing.js"></script>
 <script type="text/javascript">
 	jQuery(document).ready(function($) {
-		$(".scroll").click(function(event){		
+		$(".scroll").click(function(event){
 			event.preventDefault();
 			$('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
 		});
@@ -43,7 +43,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </script>
 <!-- start-smoth-scrolling -->
 </head>
-	
+
 <body>
 <!-- banner -->
 	<div class="banner1">
@@ -61,7 +61,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="#" class="wthree_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 						<li><a href="#" class="wthree_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 						<li><a href="#" class="wthree_dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
-						
+
 					</ul>
 				</div>
 				<div class="clearfix"></div>
@@ -74,37 +74,32 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<h1><a class="navbar-brand" href="index.html">Executive</a></h1>
+					<h1><a class="navbar-brand" href="index.html">HOMEPAGE</a></h1>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
 					<nav class="menu menu--iris">
 						<ul class="nav navbar-nav menu__list">
-							<li class="menu__item"><a href="index.html" class="menu__link">Home</a></li>
-							<li class="menu__item"><a href="about.html" class="menu__link">About</a></li>
-							<li class="menu__item menu__item--current"><a href="portfolio.html" class="menu__link">Portfolio</a></li>
-							<li class="menu__item"><a href="services.html" class="menu__link">Services</a></li>
-							<li class="dropdown menu__item">
-								<a href="#" class="dropdown-toggle menu__link" data-toggle="dropdown">Short Codes <b class="caret"></b></a>
-								<ul class="dropdown-menu agile_short_dropdown">
-									<li><a href="icons.html">Icons</a></li>
-									<li><a href="typography.html">Typography</a></li>
-								</ul>
-							</li>
+
+							<li class="menu__item"><a href="about.html" class="menu__link">Bio</a></li>
+							<li class="menu__item menu__item--current"><a href="portfolio.html" class="menu__link">Languages</a></li>
+							<li class="menu__item"><a href="services.html" class="menu__link">Fees and Costs</a></li>
+							<li class="menu__item"><a href="icons.html" class="menu__link">Testimonials</a></li>
+
 							<li class="menu__item"><a href="contact.html" class="menu__link">Contact</a></li>
 						</ul>
 					</nav>
 				</div>
-			</nav>		
+			</nav>
 		</div>
 	</div>
 <!-- //banner -->
 <!-- portfolio -->
 	<div class="portfolio">
 		<div class="container">
-			<h2 class="w3ls_head">Portfolio</h2>
-			<p class="w3layouts_para">Fusce quis leo in augue ultricies tincidunt a quis mi. Donec at massa nec sem eleifend fermentum.</p>
-			<div class="portfolio-agile">
+			<h2 class="w3ls_head">LANGUAGES</h2>
+			<p class="w3layouts_para">While not a native speaker, Mr. Falzon's Spanish, French and Italian are advanced enough to be of use in communicating verbally or in writing with clients and others in those languages.</p>
+			<!-- <div class="portfolio-agile">
 			<div class="main">
                 <div class="view view-seventh">
 					<a href="images/g1.jpg" rel="title" class="b-link-stripe b-animate-go  thickbox">
@@ -142,9 +137,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</a>
                 </div>
-				
+
             </div>
-			
+
                 <div class="view view-seventh">
 					<a href="images/g5.jpg" rel="title" class="b-link-stripe b-animate-go  thickbox">
 						<img src="images/g5-.jpg" />
@@ -181,9 +176,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</a>
                 </div>
-				
-        
-			
+
+
+
                 <div class="view view-seventh">
 					<a href="images/g4.jpg" rel="title" class="b-link-stripe b-animate-go  thickbox">
 						<img src="images/g4-.jpg" />
@@ -221,8 +216,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</a>
                 </div>
 				<div class="clearfix"></div>
-           
-			</div>
+
+			</div> -->
 		</div>
 	</div>
 <!-- //portfolio -->
@@ -324,12 +319,12 @@ $(function() {
 				containerID: 'toTop', // fading element id
 				containerHoverID: 'toTopHover', // fading element hover id
 				scrollSpeed: 1200,
-				easingType: 'linear' 
+				easingType: 'linear'
 				};
 			*/
-								
+
 			$().UItoTop({ easingType: 'easeOutQuart' });
-								
+
 			});
 	</script>
 <!-- //here ends scrolling icon -->
