--- a/template/services.html
+++ b/template/services.html
@@ -8,11 +8,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Executive a Corporate Business Category Flat Bootstrap Responsive Website Template | Services :: w3layouts</title>
+<title>FEES AND COSTS</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Executive Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
+<meta name="keywords" content="Executive Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
@@ -23,7 +23,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 <!-- //js -->
 <!-- font-awesome icons -->
-<link href="css/font-awesome.css" rel="stylesheet" type="text/css" media="all" /> 
+<link href="css/font-awesome.css" rel="stylesheet" type="text/css" media="all" />
 <!-- //font-awesome icons -->
 <link href="//fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
@@ -32,7 +32,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script type="text/javascript" src="js/easing.js"></script>
 <script type="text/javascript">
 	jQuery(document).ready(function($) {
-		$(".scroll").click(function(event){		
+		$(".scroll").click(function(event){
 			event.preventDefault();
 			$('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
 		});
@@ -57,7 +57,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="#" class="wthree_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 						<li><a href="#" class="wthree_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 						<li><a href="#" class="wthree_dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
-						
+
 					</ul>
 				</div>
 				<div class="clearfix"></div>
@@ -70,105 +70,116 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<h1><a class="navbar-brand" href="index.html">Executive</a></h1>
+					<h1><a class="navbar-brand" href="index.html">HOMEPAGE</a></h1>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
 					<nav class="menu menu--iris">
 						<ul class="nav navbar-nav menu__list">
-							<li class="menu__item"><a href="index.html" class="menu__link">Home</a></li>
-							<li class="menu__item"><a href="about.html" class="menu__link">About</a></li>
-							<li class="menu__item"><a href="portfolio.html" class="menu__link">Portfolio</a></li>
-							<li class="menu__item menu__item--current"><a href="services.html" class="menu__link">Services</a></li>
-							<li class="dropdown menu__item">
-								<a href="#" class="dropdown-toggle menu__link" data-toggle="dropdown">Short Codes <b class="caret"></b></a>
-								<ul class="dropdown-menu agile_short_dropdown">
-									<li><a href="icons.html">Icons</a></li>
-									<li><a href="typography.html">Typography</a></li>
-								</ul>
-							</li>
-							<li class="menu__item"><a href="contact.html" class="menu__link">Contact</a></li>
+
+							<li class="menu__item"><a href="about.html" class="menu__link">BIO</a></li>
+							<li class="menu__item"><a href="portfolio.html" class="menu__link">LANGUAGES</a></li>
+							<li class="menu__item menu__item--current"><a href="services.html" class="menu__link">FEES AND COSTS</a></li>
+							<li class="menu__item menu__item--current"><a href="icons.html" class="menu__link">TESTIMONIALS</a></li>
+
+
+							<li class="menu__item"><a href="contact.html" class="menu__link">CONTACT</a></li>
 						</ul>
 					</nav>
 				</div>
-			</nav>		
+			</nav>
 		</div>
 	</div>
 <!-- //banner -->
 <!-- services -->
 <!-- services -->
-	<div class="services">
+	<!-- <div class="services">
 		<div class="container">
 			<div class="w3_agile_banner_bottom_grid">
-				
-				<div class="w3_agile_banner_bottom_grid_pos">
-					
-					<h2 class="w3ls_head">What we Offer</h2>
-				</div>
-			</div>
-			<p class="w3layouts_para">Fusce quis leo in augue ultricies tincidunt a quis mi. Donec at massa nec sem eleifend fermentum.</p>
-			<div class="agile_banner_bottom_grids">
+
+				<div class="w3_agile_banner_bottom_grid_pos"> -->
+
+					<h2 class="w3ls_head">FEES AND COSTS</h2>
+				<!-- </div>
+			</div> -->
+<div class="fees">
+	<!-- <p class="w3layouts_para">While not a native speaker, Mr. Falzon's Spanish, French and Italian are advanced enough to be of use in communicating verbally or in writing with clients and others in those languages. -->
+	<!-- </p> -->
+	<p> Mr. Falzon's fee arrangements are flexible and try to take account of the different needs of clients.</p>
+	<P>All Initial Consultations are FREE until we reach an agreement on fees.
+		Whether you call me or meet with me you will not be charged a fee for an initial consultation.
+		 After the initial consultation and assessment of your case, Mr. Falzon will expect you to sign a retainer agreement.
+		You can agree to sign an agreement and move forward with representation or you may decide otherwise.</P>
+		<p> Mr. Falzon generally expects to handle Plaintiff personal injury and employment cases on CONTINGENCY.
+			That means that the client does not owe a fee unless Mr. Falzon recovers money or obtains some other agreed upon result, such as reinstatement to your job.
+			However, clients are expected to pay out of pocket costs that are incurred once suit is filed as they are incurred.
+			Mr. Falzon will discuss the potential amount of these anticipated costs as the litigation proceeds.
+			Costs usually include the filing fee for bringing an action ($401), the fee for serving suit on your employer ($40), court reporter fees and deposition fees.
+			These fees must be paid by the client in advance of them being incurred.   </p>
+</div>
+
+			<!-- <div class="agile_banner_bottom_grids">
 				<div class="col-md-3 agile_services_grid">
 					<div class="agileits_w3layouts_service_grid">
-						<div class="w3_agileits_service_grid">	
+						<div class="w3_agileits_service_grid">
 							<span></span>
 							<i class="fa fa-briefcase" aria-hidden="true"></i>
 						</div>
 					</div>
 					<h4>Placerat nisl</h4>
 					<p>Duis ac sodales nulla, sit amet aliquet libero. In auctor sed lectus quis consectetur.</p>
-					
+
 				</div>
 				<div class="col-md-3 agile_services_grid">
 					<div class="agileits_w3layouts_service_grid">
-						<div class="w3_agileits_service_grid">	
+						<div class="w3_agileits_service_grid">
 							<span></span>
 							<i class="fa fa-bar-chart" aria-hidden="true"></i>
 						</div>
 					</div>
 					<h4>sodales amet</h4>
 					<p>Duis ac sodales nulla, sit amet aliquet libero. In auctor sed lectus quis consectetur.</p>
-					
+
 				</div>
 				<div class="col-md-3 agile_services_grid">
 					<div class="agileits_w3layouts_service_grid">
-						<div class="w3_agileits_service_grid">	
+						<div class="w3_agileits_service_grid">
 							<span></span>
 							<i class="fa fa-bullhorn" aria-hidden="true"></i>
 						</div>
 					</div>
 					<h4>Aliquet libero</h4>
 					<p>Duis ac sodales nulla, sit amet aliquet libero. In auctor sed lectus quis consectetur.</p>
-					
+
 				</div>
 				<div class="col-md-3 agile_services_grid">
 					<div class="agileits_w3layouts_service_grid">
-						<div class="w3_agileits_service_grid">	
+						<div class="w3_agileits_service_grid">
 							<span></span>
 							<i class="fa fa-building-o" aria-hidden="true"></i>
 						</div>
 					</div>
 					<h4>Sed lectus</h4>
 					<p>Duis ac sodales nulla, sit amet aliquet libero. In auctor sed lectus quis consectetur.</p>
-					
+
 				</div>
 				<div class="clearfix"> </div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 <!-- //services -->
 <!-- services-bottom -->
-	<div class="services-bottom services">
+	<!-- <div class="services-bottom services">
 		<div class="container">
 			<h3><i class="fa fa-quote-left" aria-hidden="true"></i>the real mechanism for corporate governance is the active involvement of the owners</h3>
 		</div>
-	</div>
+	</div> -->
 <!-- //services-bottom -->
 <!-- choose -->
-	<div class="choose">
+	<!-- <div class="choose">
 		<div class="container">
 			<div class="w3_agile_banner_bottom_grid">
-				
+
 				<div class="w3_agile_banner_bottom_grid_pos">
 					<h3 class="w3ls_head">Why choose us</h3>
 				</div>
@@ -236,7 +247,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="clearfix"> </div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 <!-- //choose -->
 <!-- //services -->
 <!-- footer -->
@@ -328,12 +339,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				containerID: 'toTop', // fading element id
 				containerHoverID: 'toTopHover', // fading element hover id
 				scrollSpeed: 1200,
-				easingType: 'linear' 
+				easingType: 'linear'
 				};
 			*/
-								
+
 			$().UItoTop({ easingType: 'easeOutQuart' });
-								
+
 			});
 	</script>
 <!-- //here ends scrolling icon -->
