--- a/template/css/flexslider.css
+++ b/template/css/flexslider.css
@@ -15,17 +15,17 @@
 .flexslider a:focus  {outline: none;}
 .slides,
 .flex-control-nav,
-.flex-direction-nav {margin: 0; padding: 0; list-style: none;} 
+.flex-direction-nav {margin: 0; padding: 0; list-style: none;}
 
 /* FlexSlider Necessary Styles
-*********************************/ 
+*********************************/
 .flexslider .slides > li {display: none; -webkit-backface-visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
 .flexslider .slides img {width: 100%; display: block;}
 .flex-pauseplay span {text-transform: capitalize;}
 
 /* Clearfix for the .slides element */
-.slides:after {content: "."; display: block; clear: both; visibility: hidden; line-height: 0; height: 0;} 
-html[xmlns] .slides {display: block;} 
+.slides:after {content: "."; display: block; clear: both; visibility: hidden; line-height: 0; height: 0;}
+html[xmlns] .slides {display: block;}
 * html .slides {height: 1%;}
 
 /* No JavaScript Fallback */
@@ -115,8 +115,8 @@ html[xmlns] .slides {display: block;}
 	-ms-transform: rotate(-90deg);
 	-o-transform: rotate(-90deg);
 }
-.flex-control-paging li a.flex-active { 
-	background:#00f1ff; 
+.flex-control-paging li a.flex-active {
+	background:#A9A9A9; 
 	cursor: default;
 	transform: rotateX(360deg);
 	-webkit-transform: rotateX(360deg);
